# ai-dev-tasks

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/photo_search/: __init__.py  config.py  database.py  main.py  photos_service.py  vllm_service.py
tasks/: prd-contextual-photo-search.md  tasks-prd-contextual-photo-search.md
tests/: __init__.py  test_database.py  test_photos_service.py  test_vllm_service.py
