[project]
name = "contextual-photo-search"
version = "0.1.0"
description = "A CLI tool to search photos with natural language."
authors = [
    {name = "AI Assistant", email = "assistant@example.com"},
]
dependencies = [
    "osxphotos>=0.67.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
    "typer[all]>=0.16.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/photo_search"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.ruff]
select = ["E", "F", "I", "W", "C90", "N"]
line-length = 88
src = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
